exports[`Render Carousel Renders the Carousel 1`] = `
<div
  className="carouselcont">
  <div
    className="carousel-wrapper">
    <div
      className="sc-jRQBWg qoLPS rec rec-carousel-wrapper "
      style={Object {}}>
      <div
        className="sc-eCImPb jMNKZk rec rec-carousel"
        size={
          Object {
            "height": 0,
          }
        }
        style={
          Object {
            "height": 0,
          }
        }>
        <button
          className="sc-bdvvtL cNNJIt rec rec-arrow rec rec-arrow-left"
          disabled={true}
          onClick={[Function]}
          style={Object {}}
          tabIndex={0}
          type="button">
          ❮
        </button>
        <div
          className="sc-dkPtRN fPDpuU rec rec-slider-container">
          <div
            className="sc-hKwDye jZlXPY rec rec-slider"
            style={
              Object {
                "left": "0px",
                "right": "auto",
                "top": "auto",
                "transition": "all 500ms ease",
              }
            }>
            <div
              className="rec rec-swipable"
              onMouseDown={[Function]}
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                }
              } />
          </div>
        </div>
        <button
          className="sc-bdvvtL cNNJIt rec rec-arrow rec rec-arrow-right"
          disabled={true}
          onClick={[Function]}
          style={Object {}}
          tabIndex={0}
          type="button">
          ❯
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render Reservations page Renders the Reservations page 1`] = `
<div
  className="pt-5">
  <h1
    className="text-center mb-3">
    My Reservations
  </h1>
   
</div>
`;

exports[`Render Services page Renders the Services page 1`] = `
<div
  className="container-fluid vh-100 d-flex justify-content-center align-items-center">
  <div
    className="row w-100">
    <h1
      className="text-center text-uppercase fw-bolder tittle">
      All Services
    </h1>
    <p
      className="fw-lighter text-center mb-3 fw-bold grey">
      Please select a Service
    </p>
    <p
      className="text-center fw-lighter grey">
      ***************
    </p>
    <div
      className="carouselcont">
      <div
        className="carousel-wrapper">
        <div
          className="sc-jRQBWg qoLPS rec rec-carousel-wrapper "
          style={Object {}}>
          <div
            className="sc-eCImPb jMNKZk rec rec-carousel"
            size={
              Object {
                "height": 0,
              }
            }
            style={
              Object {
                "height": 0,
              }
            }>
            <button
              className="sc-bdvvtL cNNJIt rec rec-arrow rec rec-arrow-left"
              disabled={true}
              onClick={[Function]}
              style={Object {}}
              tabIndex={0}
              type="button">
              ❮
            </button>
            <div
              className="sc-dkPtRN fPDpuU rec rec-slider-container">
              <div
                className="sc-hKwDye jZlXPY rec rec-slider"
                style={
                  Object {
                    "left": "0px",
                    "right": "auto",
                    "top": "auto",
                    "transition": "all 500ms ease",
                  }
                }>
                <div
                  className="rec rec-swipable"
                  onMouseDown={[Function]}
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  } />
              </div>
            </div>
            <button
              className="sc-bdvvtL cNNJIt rec rec-arrow rec rec-arrow-right"
              disabled={true}
              onClick={[Function]}
              style={Object {}}
              tabIndex={0}
              type="button">
              ❯
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
